# sociallimits

./: README.md  pyproject.toml  setup.cfg
sociallimits/: __init__.py
tests/: test_platforms.py
